# hot-or-not-backend-canister

./: .devcontainer.json  .dockerignore  .envrc  .gitignore  .gitmodules  .history  Cargo.toml  Dockerfile  README.md  TESTS.md  canister_ids.json  default.nix  dfx.json  flake.nix  hot_or_not.md  notes.md  platform_orchestrator.did  post_cache.did  rust-toolchain.toml  shell.nix  sns.yml  sns_canister_ids.json  talking_points.md  user_index.did
src/canister/configuration/: Cargo.toml  can.did
src/canister/configuration/src/: data.rs  lib.rs
src/canister/configuration/src/api/: mod.rs
src/canister/data_backup/: Cargo.toml  can.did
src/canister/data_backup/src/: lib.rs
src/canister/data_backup/src/api/: mod.rs
src/canister/data_backup/src/data/: heap_data.rs  mod.rs
src/canister/individual_user_template/: Cargo.toml  can.did
src/canister/individual_user_template/src/: lib.rs  test.rs
src/canister/individual_user_template/src/api/: mod.rs
src/canister/individual_user_template/src/data_model/: airdrop.rs  cents_hot_or_not_game.rs  kv_storage.rs  memory.rs  mod.rs  pump_n_dump.rs  version_details.rs
src/canister/individual_user_template/src/util/: cycles.rs  guard.rs  guards.rs  migration.rs  mod.rs  periodic_update.rs  score_ranking.rs  subnet_orchestrator.rs
src/canister/platform_orchestrator/: Cargo.toml  can.did
src/canister/platform_orchestrator/src/: lib.rs  test.rs
src/canister/platform_orchestrator/src/api/: mod.rs
src/canister/platform_orchestrator/src/data_model/: memory.rs  mod.rs
src/canister/platform_orchestrator/src/guard/: is_caller.rs  mod.rs
src/canister/platform_orchestrator/src/utils/: mod.rs  registered_subnet_orchestrator.rs
src/canister/post_cache/: Cargo.toml  can.did  can.old.did
src/canister/post_cache/lib/src/: lib.rs
src/canister/post_cache/src/: lib.rs
src/canister/post_cache/src/api/: mod.rs
src/canister/post_cache/src/data_model/: mod.rs
src/canister/post_cache/src/util/: access_control.rs
src/canister/user_index/: Cargo.toml  can.did  can.old.did
src/canister/user_index/src/: lib.rs
src/canister/user_index/src/api/: mod.rs  version.rs
src/canister/user_index/src/data_model/: memory.rs  mod.rs  recycle_canister.rs
src/canister/user_index/src/util/: canister_management.rs  mod.rs
src/lib/integration_tests/: Cargo.toml
src/lib/integration_tests/tests/: every_hour_home_feed_post_scores_in_posts_index_sorted_by_score_is_updated_and_top_3_posts_are_sent_to_post_cache.rs  every_hour_hot_or_not_feed_post_scores_in_posts_index_sorted_by_score_is_updated_and_top_3_posts_are_sent_to_post_cache.rs  every_hour_post_scores_in_posts_index_sorted_by_score_is_updated_and_every_four_hours_score_reduces_owing_to_freshness_component.rs  on_every_upgrade_fetch_the_latest_list_of_well_known_principals_and_update_canisters.rs  recycle_canisters_test.rs  when_a_new_user_signs_up_then_the_new_user_is_given_a_thousand_utility_tokens_for_signing_up.rs  when_backups_are_run_on_all_the_individual_user_canisters_they_capture_all_relevant_data_and_when_restored_they_return_the_canisters_to_their_original_state.rs  when_backups_are_run_on_all_the_individual_user_canisters_they_capture_all_relevant_data_and_when_restored_they_return_the_canisters_to_their_original_state_v1.rs  when_backups_are_run_on_the_user_index_canister_they_capture_all_relevant_data_and_when_restored_they_return_the_canister_to_its_original_state.rs  when_bob_charlie_dan_interact_with_alice_created_post_then_calculated_home_feed_and_hot_or_not_feed_scores_match_expected_value.rs  when_bob_charlie_dan_places_new_bet_on_alice_post_then_expected_outcomes_occur.rs  when_canister_cycle_balance_is_below_the_threshold_then_running_topup_function_in_user_index_canister_tops_up_the_canisters_that_need_it.rs  when_creating_a_new_post_then_post_score_should_be_calculated.rs  when_setting_unique_username_then_new_username_persisted_in_personal_canister_and_updated_in_user_index.rs
src/lib/integration_tests/tests/authentication/: main.rs
src/lib/integration_tests/tests/backup_and_restore/: download_snapshot_test.rs  main.rs
src/lib/integration_tests/tests/configuration/: main.rs
src/lib/integration_tests/tests/creator_dao/: airdrop.rs  main.rs  test_custom_governance_upgrade.rs  test_deletion_of_creator_tokens.rs  test_number_of_creator_tokens.rs  test_swap_flow.rs  types.rs  utils.rs
src/lib/integration_tests/tests/cycle_management/: main.rs
src/lib/integration_tests/tests/feed/: main.rs  when_bob_charlie_dan_interact_with_alice_created_post_then_calculated_home_feed_and_hot_or_not_feed_scores_match_expected_value.rs
src/lib/integration_tests/tests/follow/: main.rs  when_alice_follows_bob_and_bob_follows_charlie_then_all_their_follow_and_following_lists_are_accordingly_updated.rs
src/lib/integration_tests/tests/hot_or_not/: bet_maker_canister_tests.rs  bet_maker_canister_tests_using_cents.rs  hot_or_not_simulation_using_cents_test.rs  hot_or_not_timely_index_update_test.rs  hotornot_game_simulation_test.rs  main.rs  receive_call_from_canister.rs  reconcile_scores_test.rs  resolve_pending_bet_test.rs  test_hot_or_not_bets_placed_using_cents_are_computed_even_after_individual_canister_upgrade.rs  timers_test.rs  when_bob_charlie_dan_place_bet_on_alice_created_post_then_expected_outcomes_occur.rs  when_bob_charlie_dan_place_bet_on_alice_created_post_then_expected_outcomes_occur_v1.rs  yral_game_simulation_test.rs
src/lib/integration_tests/tests/individual_canister/: main.rs  platform_orchestrator_on_receiving_call_from_global_admin_can_make_individual_canister_logs_public_test.rs
src/lib/integration_tests/tests/kv_store/: main.rs  test_namespace.rs
src/lib/integration_tests/tests/platform_orchestrator/: main.rs  provision_empty_canisters_in_a_subnet_test.rs  provision_subnet_orchestrator.rs  provision_subnet_orchestrator_test.rs  (+7 more)
src/lib/shared_utils/: Cargo.toml
src/lib/shared_utils/src/: access_control.rs  constant.rs  cycles.rs  lib.rs  pagination.rs
src/lib/test_utils/: Cargo.toml  cycles-minting-canister.wasm  ledger-canister.wasm
(+534 files in other folders)
