[workspace]
resolver = "2"

members = [
    "src/canister/individual_user_template",
    "src/canister/post_cache/",
    "src/canister/user_index",
    "src/canister/platform_orchestrator",
    "src/lib/integration_tests",
    "src/lib/shared_utils",
    "src/lib/test_utils",
]

[workspace.dependencies]
candid = "0.10.2"
ciborium = "0.2.1"
pocket-ic = "3.0.0"
ic-cdk = "0.13.5"
ic-cdk-timers = "0.6.0"
ic-cdk-macros = "0.16.0"
ic-stable-structures = "0.6.2"
ic-ledger-types = "0.9.0"
ic-test-state-machine-client = "3.0.0"
rmp-serde = "1.1.2"
serde = "1.0.186"
futures = "0.3.29"
shared_utils = { path = "./src/lib/shared_utils" }
test_utils = { path = "./src/lib/test_utils" }
serde_json = "1.0.113"
