[workspace]
resolver = "2"

members = [
    "src/canister/individual_user_template",
    "src/canister/post_cache/",
    "src/canister/user_index",
    "src/canister/platform_orchestrator",
    "src/lib/integration_tests",
    "src/lib/shared_utils",
    "src/lib/test_utils",
]

[workspace.dependencies]
candid = "0.10.2"
ciborium = "0.2.1"
pocket-ic = "6.0.0"
ic-cdk = "0.15.1"
ic-cdk-timers = "0.7.0"
ic-cdk-macros = "0.16.0"
ic-stable-structures = "0.6.2"
ic-ledger-types = "0.9.0"
ic-test-state-machine-client = "3.0.0"
rmp-serde = "1.1.2"
serde = "1.0.186"
futures = "0.3.29"
shared_utils = { path = "./src/lib/shared_utils" }
test_utils = { path = "./src/lib/test_utils" }
serde_json = "1.0.113"
ic-sns-init = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-sns-root = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-sns-wasm = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-sns-governance = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-nns-constants = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-nervous-system-proto = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-nns-governance = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-nervous-system-humanize = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-icrc1-ledger = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-icrc1-index-ng = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-icrc1-index = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-10-17_03-07-base" }
icrc-ledger-types = "0.1.6"
