[package]
name = "individual_user_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
ic-stable-structures = "0.6.2"
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
shared_utils = { workspace = true }
serde_json = "1.0.113"
serde_json_any_key = "2.0.0"

[dev-dependencies]
test_utils = { workspace = true }
