[package]
name = "individual_user_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = { workspace = true }
ciborium = { workspace = true }
ic-stable-structures = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-cdk-macros = { workspace = true }
serde = { workspace = true }
shared_utils = { workspace = true }
serde_json = { workspace = true }
serde_json_any_key = "2.0.0"
serde_bytes = "0.11.14"
futures = { workspace = true }
ic-sns-init.workspace = true
ic-sns-wasm.workspace = true
ic-base-types.workspace = true
ic-nns-constants.workspace = true
ic-icrc1-ledger.workspace = true
ic-icrc1-index-ng.workspace = true
ic-icrc1-index.workspace = true
hex = "0.4.3"

[dev-dependencies]
test_utils = { workspace = true }
