[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
pocket-ic = { workspace = true } 
shared_utils = { workspace = true }
serde = {workspace = true }
ic-ledger-types = { workpace = true }

[dev-dependencies]
ic-test-state-machine-client = { workspace = true }
serde.workspace = true
test_utils = { workspace = true }


[features]
feed_filter_upgrade_test = []
