[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
pocket-ic = { workspace = true }
shared_utils = { workspace = true }
serde = { workspace = true }
ic-ledger-types = { workspace = true }
ic-sns-init = { workspace = true }
ic-sns-wasm = { workspace = true }
hex = "0.4.3"
sha256 = "1.5.0"
sha2 = "0.10.8"
flate2 = "1.0.33"
serde_bytes = "0.11.15"
icp-ledger = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-05-29_23-02-base"}
ic-base-types = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-05-29_23-02-base"}
ic-sns-swap = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-05-29_23-02-base"}
ic-sns-governance = { git = "https://github.com/dfinity/ic", rev = "tags/release-2024-05-29_23-02-base"}

[dev-dependencies]
ic-test-state-machine-client = { workspace = true }
test_utils = { workspace = true }


[features]
feed_filter_upgrade_test = []
bet_details_heap_to_stable_mem_upgrade = []
