[package]
name = "shared_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
rmp-serde = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
ciborium = { workspace = true }

[dev-dependencies]
test_utils = { workspace = true }

[features]
mockdata = []
