[package]
name = "shared_utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid = { workspace = true }
ic-cdk = { workspace = true }
ic-cdk-timers = { workspace = true }
ic-stable-structures = { workspace = true }
rmp-serde = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
serde_json_any_key = "2.0.0"
serde_bytes = "0.11.14"
icrc-ledger-types = { workspace = true }
ed25519-compact = { version = "2.1.1", default-features = false, features = ["std"] }
trie-db = { version = "0.29.1", default-features =  false }
hash-db = { version = "0.16.0", default-features = false }
blake3 = "1.5.4"
hash256-std-hasher = { version = "0.15.2", default-features = false }
parity-scale-codec = { version = "3.6.12", default-features = false }
memory-db = { version = "0.32.0", default-features = false }
trie-root = { version = "0.18.0", default-features = false }
# monotree = { git = "https://github.com/rupansh-sekar-yral/monotree.git", rev = "1504007dae91a909fbb29bfebb36181ef3333cb8" }
# hashbrown = { version = "0.7", features = ["serde"] }
generic-array = { version = "1.1.1", features = ["serde"] }

[dev-dependencies]
test_utils = { workspace = true }
pprof = { version = "0.13", features = ["flamegraph"] }

[features]
mockdata = []
